--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
     - php: 7.1
       env:
         - PHPCS=1
-        - PHPCS_IGNORE=CakeBasicFunctions,CakeExtendTest,CakeConfigPlugin,CakeTheme,AssetCompress,Bs3Helpers,Queue,Shim,Tools
+        - PHPCS_IGNORE=CakeBasicFunctions,CakeExtendTest,CakeConfigPlugin,CakeTheme,AssetCompress,Bs3Helpers,Queue,Shim,Tools,Datasource
     - php: 7.1
       env:
         - FOC_VALIDATE=1
